<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RingActivity" >

    <TextView
        android:id="@id/remote_name_tx_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    <Button
        android:id="@id/ring_decline_btn"
        android:text="@string/ring_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        />

    <Button
        android:id="@id/ring_answer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ring_answer"
        android:layout_centerInParent="true"
        />

</RelativeLayout>
